--- a/_site.yml
+++ b/_site.yml
@@ -1,13 +1,16 @@
-name: "Yay internet!"
+name: "Bryce Wong"
 output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
-      href: about.html
+    - text: "CV"
+      href: CV.html
     - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
+      href: mailto:<baw2160@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/<bryce-wong>/
+      href: https://github.com/bryce-wong
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/bryce-wong-284219139
 output:
-  html_document
+  html_document:
+    theme: cosmo
